--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             }
             
             .thx {
-                font-family: serif;
+                font-family: sans-serif;
             }
             
             h1 {
