--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             body {
                 background-color: rgb(247, 223, 67);
                 text-align: center;
-                font-family: cursive;
+                font-family: sans-serif;
             }
             
             h4 {
